--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="flexbox-container">
-      <div class="coloana-main">
+      <div class="coloana-map">
         <img
           src="images/harta.jpg"
           id="harta"
